spade-tests/src/snapshots/spade_tests__parser__both_range_index_is_expr_and_missing_end_is_error.snap
---
source: spade-tests/src/parser.rs
---
fn top() -> bool {
    let a = [true, true, false];
    a[1+1:]
}


error: Range indices must be integers
  ┌─ testinput:3:7
  │
3 │     a[1+1:]
  │       ^^^ range index is not an integer literal


